<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_aboutme1"

    android:background="@color/darkBlue">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".aboutmepage"

        android:background="@color/darkBlue"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/buttonNav"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"

                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:background="@null"
                android:src="@drawable/ic_nav"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"

                android:layout_toEndOf="@+id/buttonNav"

                android:text="@string/titleAboutMe"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buttonProfile"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"

                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="14dp"
                android:background="@null"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                >

                <TextView

                    android:layout_width="372dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ptsans"


                    android:text="@string/devName"


                    android:textAlignment="2"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="372dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ptsans"


                    android:text="@string/devTitle"


                    android:textAlignment="2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"

                    android:layout_gravity="center"
                    android:id="@+id/view2"
                    app:cardCornerRadius="40dp"
                    android:shape="ring"

                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    >
                    <ImageView
                        android:layout_height="80dp"
                        android:layout_width="match_parent"
                        android:id="@+id/imageView1"
                        android:src="@drawable/siswa"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
                    </ImageView>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/heading1_About"

                    android:fontFamily="@font/ptsans"
                    android:textAlignment="2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/bodyWork"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ptsans"
                    android:textAlignment="2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

                <androidx.cardview.widget.CardView

                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:elevation="12dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="@color/cream"
                    android:shape="rectangle"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/layout_theme_card"
                        android:layout_gravity="center" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/buttonText1"
                            android:textColor="@color/darkBlue"
                            android:textStyle="bold"
                            />

                        <ImageView
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_arrow" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading2_About"
                    android:layout_marginBottom="8dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yearBorn"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/descBorn"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yearSchool"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/descSchool"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_mail"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:text="@string/devEmail"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_twitter"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:text="@string/devTwitter"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>