<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_homemenu">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/buttonProfile"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"

                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="14dp"
                android:background="@null"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>


        <TextView

            android:id="@+id/textView2"
            android:layout_width="372dp"
            android:layout_height="55dp"

            android:layout_marginTop="24dp"
            android:fontFamily="@font/ptsans"
            android:gravity="center"
            android:text="@string/heading1"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <TextView

            android:id="@+id/textView3"
            android:layout_width="360dp"

            android:layout_height="23dp"
            android:fontFamily="@font/ptsans"
            android:gravity="center"
            android:text="@string/quotes1"
            android:textColor="@color/white"

            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="435dp"
            android:layout_height="585dp"
            android:layout_marginTop="90dp"
            android:background="@color/lightPurple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.435">


            <androidx.cardview.widget.CardView

                android:id="@+id/card_hm1"
                android:layout_width="585dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="52dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="233dp"

                app:cardBackgroundColor="@color/lightPurple"
                app:cardElevation="50dp">





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@null"
                        android:src="@drawable/hp_carlist" />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/title_menu1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/desc_menu1"
                        android:textColor="@color/white"
                        android:textSize="11sp"

                        />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_hm2"
                android:layout_width="wrap_content"
                android:layout_height="151dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="232dp"
                android:layout_marginTop="126dp"
                android:layout_marginEnd="53dp"

                app:cardBackgroundColor="@color/lightPurple"
                app:cardElevation="50dp">

                <!--
                <ImageButton
                    android:id="@+id/buttonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    />
                    -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="142dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@null"
                        android:src="@drawable/hp_popular" />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/title_menu2"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/desc_menu2"
                        android:textColor="@color/white"
                        android:textSize="11sp"

                        />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_hm3"
                android:layout_width="150dp"
                android:layout_height="163dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="54dp"
                android:layout_marginTop="235dp"
                android:layout_marginEnd="231dp"

                app:cardBackgroundColor="@color/lightPurple"
                app:cardElevation="50dp">

                <!--
                <ImageButton
                    android:id="@+id/buttonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    />
                    -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="152dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@null"
                        android:src="@drawable/hp_cartuning" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"


                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/title_menu3"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/desc_menu3"
                        android:textColor="@color/white"
                        android:textSize="11sp"

                        />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_hm4"
                android:layout_width="wrap_content"
                android:layout_height="151dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="230dp"
                android:layout_marginTop="305dp"
                android:layout_marginEnd="55dp"

                app:cardBackgroundColor="@color/lightPurple"
                app:cardElevation="50dp">

                <!--
                <ImageButton
                    android:id="@+id/buttonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    />
                    -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="142dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_history" />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/title_menu4"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/desc_menu4"
                        android:textColor="@color/white"
                        android:textSize="11sp"

                        />


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <EditText

            android:layout_width="281dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightBlue"
            android:hint="@string/hint"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton

            android:id="@+id/imageButton2"
            android:layout_width="57dp"
            android:layout_height="48dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightBlue"
            android:src="@drawable/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />








    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>